<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/body"
        tools:context=".Activity_show_more"
>
    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/Activity_show_more_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="10dp"
    >
        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/Activity_show_more_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="Recent activity"
                app:titleTextColor="@android:color/black"
                android:background="@color/toolbar"
                app:navigationIcon="@drawable/ic_round_arrow_back_24_black"
        />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/Activity_show_more_tab"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/tab"
            app:tabTextColor="@android:color/black"
            app:tabSelectedTextColor="@android:color/black"
            app:tabIndicator="@drawable/tab_selected"
            app:tabIndicatorColor="@color/colorTabSelected"
            app:tabIndicatorGravity="stretch"
            app:tabRippleColor="@null"
            app:tabGravity="fill"
            app:tabMode="auto"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:tabMinWidth="117dp"
            android:layout_below="@+id/Activity_show_more_toolbar_layout">

        <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_month"
                />

        <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_month"
                />

        <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more"
                />
    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/Activity_show_more_periode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Activity_show_more_tab"


        android:gravity="center"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/Activity_show_more_list_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Activity_show_more_periode"
            >

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Activity_show_more_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:foreground="@android:color/transparent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <LinearLayout
        android:id="@+id/Activity_show_more_list_no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/Activity_show_more_tab"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:alpha=".5"
            android:src="@drawable/ic_navi_sticky_note_2_24"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/titillium_web_regular"
            android:text="No record"
            android:textSize="15sp"
            />
    </LinearLayout>

</RelativeLayout>