<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true"
    android:background="@color/toolbar"
    tools:context=".Activity_Dashboard"
    >
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dashboard_new_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/test_text"
        android:src="@drawable/ic_round_add_24_white"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:fabSize="normal"
        app:tint="@android:color/white"

        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/main_AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:elevation="0dp"
            app:elevation="0dp"
            >
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/toolbar"
                app:title="@string/app_name"
                app:titleTextColor="@android:color/black"
                app:navigationIcon="@drawable/ic_round_arrow_back_24_black"

                />
        </com.google.android.material.appbar.AppBarLayout>

        <GridLayout
                android:id="@+id/dashboard_exin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/main_AppBarLayout"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:foregroundGravity="center"
                android:orientation="horizontal"
                android:background="@color/body"
                android:columnCount="2"
                android:rowCount="1"
                >

            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/formField"

                    android:minWidth="160dp"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="1dp"
                    >

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/income"
                            android:textColor="#388E3C"
                            android:textSize="18sp"
                            />

                    <TextView
                            android:id="@+id/dashboard_income"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="0dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/roboto_bold_condensed"
                            android:text="@string/test_text"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/formField"
                    android:minWidth="160dp"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="1dp"
                    >

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/expense"
                            android:textColor="#E91E63"
                            android:textSize="18sp"
                            />

                    <TextView
                            android:id="@+id/dashboard_expense"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="0dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/roboto_bold_condensed"
                            android:text="@string/test_text"
                            android:textColor="@android:color/black"
                            android:textSize="20sp"
                            />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/dashboard_exin"
                android:background="@color/body"
                >

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/dashboard_Recent_Activity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/titillium_web_regular"
                    android:text="Recent Activity"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            <ImageView
                    android:id="@+id/view_more_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="10dp"

                    android:src="@drawable/ic_baseline_more_vert_24_black"
                    />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dashboard_Recent_Activity_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/dashboard_Recent_Activity_label"
                    android:layout_alignParentBottom="true"

                    android:foreground="@android:color/transparent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                    android:visibility="gone"
                    />

            <LinearLayout
                    android:id="@+id/dashboard_no_Recent_Activity_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/dashboard_Recent_Activity_label"
                    android:layout_marginBottom="100dp"
                    android:gravity="center"
                    android:orientation="vertical">

                <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:alpha=".5"
                        android:src="@drawable/ic_navi_sticky_note_2_24"
                        />

                <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/titillium_web_regular"
                        android:text="No record"
                        android:textSize="15sp"

                        />
            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
